MyGrammarParser.py
# Generated from MyGrammar.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyGrammarParser ( Parser ):

    grammarFileName = "MyGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'^'", "'and'", "'or'", "'not'", "'='", 
                     "'>'", "'<'", "'+'", "'*'", "'-'", "'/'", "'++'", "'--'", 
                     "','", "';'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'return'", "<INVALID>", "'&'", "'.'", "'if'", "'else'", 
                     "'while'", "'switch'", "'case'", "'main'" ]

    symbolicNames = [ "<INVALID>", "ZERO", "AND", "OR", "NOT", "EQ", "GREATER", 
                      "LESS", "COMBINATION", "INTERSECTION", "SET", "SSET", 
                      "INCREMENT", "DECREMENT", "COMMA", "SEMI", "LPAREN", 
                      "RPAREN", "LCURLY", "RCURLY", "LSQUARE", "RSQUARE", 
                      "RETURN", "TYPE", "LINK", "DOT", "IF", "ELSE", "WHILE", 
                      "SWITCH", "CASE", "MAIN", "INT", "ID", "WS" ]

    RULE_program = 0
    RULE_stat = 1
    RULE_def = 2
    RULE_index = 3
    RULE_lists = 4
    RULE_trees = 5
    RULE_expr = 6
    RULE_func = 7

    ruleNames =  [ "program", "stat", "def", "index", "lists", "trees", 
                   "expr", "func" ]

    EOF = Token.EOF
    ZERO=1
    AND=2
    OR=3
    NOT=4
    EQ=5
    GREATER=6
    LESS=7
    COMBINATION=8
    INTERSECTION=9
    SET=10
    SSET=11
    INCREMENT=12
    DECREMENT=13
    COMMA=14
    SEMI=15
    LPAREN=16
    RPAREN=17
    LCURLY=18
    RCURLY=19
    LSQUARE=20
    RSQUARE=21
    RETURN=22
    TYPE=23
    LINK=24
    DOT=25
    IF=26
    ELSE=27
    WHILE=28
    SWITCH=29
    CASE=30
    MAIN=31
    INT=32
    ID=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(MyGrammarParser.MAIN, 0)

        def LCURLY(self):
            return self.getToken(MyGrammarParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(MyGrammarParser.RCURLY, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.StatContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.StatContext,i)


        def EOF(self):
            return self.getToken(MyGrammarParser.EOF, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MyGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(MyGrammarParser.MAIN)
            self.state = 17
            self.match(MyGrammarParser.LCURLY)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13905166352) != 0):
                self.state = 18
                self.stat()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(MyGrammarParser.RCURLY)
            self.state = 26
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 25
                self.match(MyGrammarParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.ID)
            else:
                return self.getToken(MyGrammarParser.ID, i)

        def EQ(self):
            return self.getToken(MyGrammarParser.EQ, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.ExprContext,i)


        def SEMI(self):
            return self.getToken(MyGrammarParser.SEMI, 0)

        def TYPE(self):
            return self.getToken(MyGrammarParser.TYPE, 0)

        def def_(self):
            return self.getTypedRuleContext(MyGrammarParser.DefContext,0)


        def DOT(self):
            return self.getToken(MyGrammarParser.DOT, 0)

        def func(self):
            return self.getTypedRuleContext(MyGrammarParser.FuncContext,0)


        def RETURN(self):
            return self.getToken(MyGrammarParser.RETURN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.COMMA)
            else:
                return self.getToken(MyGrammarParser.COMMA, i)

        def ELSE(self):
            return self.getToken(MyGrammarParser.ELSE, 0)

        def LCURLY(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.LCURLY)
            else:
                return self.getToken(MyGrammarParser.LCURLY, i)

        def RCURLY(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.RCURLY)
            else:
                return self.getToken(MyGrammarParser.RCURLY, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.StatContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.StatContext,i)


        def IF(self):
            return self.getToken(MyGrammarParser.IF, 0)

        def LPAREN(self):
            return self.getToken(MyGrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MyGrammarParser.RPAREN, 0)

        def WHILE(self):
            return self.getToken(MyGrammarParser.WHILE, 0)

        def SWITCH(self):
            return self.getToken(MyGrammarParser.SWITCH, 0)

        def CASE(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.CASE)
            else:
                return self.getToken(MyGrammarParser.CASE, i)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = MyGrammarParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23:
                    self.state = 28
                    self.match(MyGrammarParser.TYPE)


                self.state = 31
                self.match(MyGrammarParser.ID)
                self.state = 32
                self.match(MyGrammarParser.EQ)
                self.state = 33
                self.expr(0)
                self.state = 34
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.expr(0)
                self.state = 37
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.match(MyGrammarParser.TYPE)
                self.state = 40
                self.match(MyGrammarParser.ID)
                self.state = 41
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.def_()
                self.state = 43
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 45
                self.expr(0)
                self.state = 46
                self.match(MyGrammarParser.DOT)
                self.state = 47
                self.expr(0)
                self.state = 48
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23:
                    self.state = 50
                    self.match(MyGrammarParser.TYPE)


                self.state = 53
                self.match(MyGrammarParser.ID)
                self.state = 54
                self.match(MyGrammarParser.EQ)
                self.state = 55
                self.expr(0)
                self.state = 56
                self.match(MyGrammarParser.DOT)
                self.state = 57
                self.func()
                self.state = 58
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 60
                self.match(MyGrammarParser.RETURN)
                self.state = 61
                self.expr(0)
                self.state = 62
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 64
                self.match(MyGrammarParser.TYPE)
                self.state = 65
                self.match(MyGrammarParser.ID)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 66
                    self.match(MyGrammarParser.COMMA)
                    self.state = 67
                    self.match(MyGrammarParser.ID)
                    self.state = 72
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 73
                self.match(MyGrammarParser.EQ)
                self.state = 74
                self.expr(0)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 75
                    self.match(MyGrammarParser.COMMA)
                    self.state = 76
                    self.expr(0)
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 82
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 84
                self.match(MyGrammarParser.ELSE)
                self.state = 85
                self.match(MyGrammarParser.LCURLY)
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 86
                    self.stat()
                    self.state = 89 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 13905166352) != 0)):
                        break

                self.state = 91
                self.match(MyGrammarParser.RCURLY)
                self.state = 92
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 94
                self.match(MyGrammarParser.IF)
                self.state = 95
                self.match(MyGrammarParser.LPAREN)
                self.state = 96
                self.expr(0)
                self.state = 97
                self.match(MyGrammarParser.RPAREN)
                self.state = 98
                self.match(MyGrammarParser.LCURLY)
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 99
                    self.stat()
                    self.state = 102 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 13905166352) != 0)):
                        break

                self.state = 104
                self.match(MyGrammarParser.RCURLY)
                self.state = 105
                self.match(MyGrammarParser.ELSE)
                self.state = 106
                self.match(MyGrammarParser.LCURLY)
                self.state = 108 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 107
                    self.stat()
                    self.state = 110 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 13905166352) != 0)):
                        break

                self.state = 112
                self.match(MyGrammarParser.RCURLY)
                self.state = 113
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 115
                self.match(MyGrammarParser.IF)
                self.state = 116
                self.match(MyGrammarParser.LPAREN)
                self.state = 117
                self.expr(0)
                self.state = 118
                self.match(MyGrammarParser.RPAREN)
                self.state = 119
                self.match(MyGrammarParser.LCURLY)
                self.state = 121 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 120
                    self.stat()
                    self.state = 123 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 13905166352) != 0)):
                        break

                self.state = 125
                self.match(MyGrammarParser.RCURLY)
                self.state = 126
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 128
                self.match(MyGrammarParser.WHILE)
                self.state = 129
                self.match(MyGrammarParser.LPAREN)
                self.state = 130
                self.expr(0)
                self.state = 131
                self.match(MyGrammarParser.RPAREN)
                self.state = 132
                self.match(MyGrammarParser.LCURLY)
                self.state = 134 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 133
                    self.stat()
                    self.state = 136 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 13905166352) != 0)):
                        break

                self.state = 138
                self.match(MyGrammarParser.RCURLY)
                self.state = 139
                self.match(MyGrammarParser.SEMI)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 141
                self.match(MyGrammarParser.SWITCH)
                self.state = 142
                self.match(MyGrammarParser.LPAREN)
                self.state = 143
                self.expr(0)
                self.state = 144
                self.match(MyGrammarParser.RPAREN)
                self.state = 145
                self.match(MyGrammarParser.LCURLY)
                self.state = 157 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 146
                    self.match(MyGrammarParser.CASE)
                    self.state = 147
                    self.expr(0)
                    self.state = 148
                    self.match(MyGrammarParser.LCURLY)
                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13905166352) != 0):
                        self.state = 149
                        self.stat()
                        self.state = 154
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 155
                    self.match(MyGrammarParser.RCURLY)
                    self.state = 159 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==30):
                        break

                self.state = 161
                self.match(MyGrammarParser.RCURLY)
                self.state = 162
                self.match(MyGrammarParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.TYPE)
            else:
                return self.getToken(MyGrammarParser.TYPE, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.ID)
            else:
                return self.getToken(MyGrammarParser.ID, i)

        def LPAREN(self):
            return self.getToken(MyGrammarParser.LPAREN, 0)

        def LINK(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.LINK)
            else:
                return self.getToken(MyGrammarParser.LINK, i)

        def RPAREN(self):
            return self.getToken(MyGrammarParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(MyGrammarParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(MyGrammarParser.RCURLY, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.COMMA)
            else:
                return self.getToken(MyGrammarParser.COMMA, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.StatContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.StatContext,i)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDef" ):
                listener.enterDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDef" ):
                listener.exitDef(self)




    def def_(self):

        localctx = MyGrammarParser.DefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(MyGrammarParser.TYPE)
            self.state = 167
            self.match(MyGrammarParser.ID)
            self.state = 168
            self.match(MyGrammarParser.LPAREN)
            self.state = 169
            self.match(MyGrammarParser.TYPE)
            self.state = 170
            self.match(MyGrammarParser.LINK)
            self.state = 171
            self.match(MyGrammarParser.ID)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 172
                self.match(MyGrammarParser.COMMA)
                self.state = 173
                self.match(MyGrammarParser.TYPE)
                self.state = 174
                self.match(MyGrammarParser.LINK)
                self.state = 175
                self.match(MyGrammarParser.ID)
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 181
            self.match(MyGrammarParser.RPAREN)
            self.state = 182
            self.match(MyGrammarParser.LCURLY)
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13905166352) != 0):
                self.state = 183
                self.stat()
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 189
            self.match(MyGrammarParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSQUARE(self):
            return self.getToken(MyGrammarParser.LSQUARE, 0)

        def INT(self):
            return self.getToken(MyGrammarParser.INT, 0)

        def RSQUARE(self):
            return self.getToken(MyGrammarParser.RSQUARE, 0)

        def ID(self):
            return self.getToken(MyGrammarParser.ID, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_index

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex" ):
                listener.enterIndex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex" ):
                listener.exitIndex(self)




    def index(self):

        localctx = MyGrammarParser.IndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_index)
        try:
            self.state = 197
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 191
                self.match(MyGrammarParser.LSQUARE)
                self.state = 192
                self.match(MyGrammarParser.INT)
                self.state = 193
                self.match(MyGrammarParser.RSQUARE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.match(MyGrammarParser.LSQUARE)
                self.state = 195
                self.match(MyGrammarParser.ID)
                self.state = 196
                self.match(MyGrammarParser.RSQUARE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSQUARE(self):
            return self.getToken(MyGrammarParser.LSQUARE, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.INT)
            else:
                return self.getToken(MyGrammarParser.INT, i)

        def RSQUARE(self):
            return self.getToken(MyGrammarParser.RSQUARE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.COMMA)
            else:
                return self.getToken(MyGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_lists

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLists" ):
                listener.enterLists(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLists" ):
                listener.exitLists(self)




    def lists(self):

        localctx = MyGrammarParser.ListsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lists)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.match(MyGrammarParser.LSQUARE)
            self.state = 200
            self.match(MyGrammarParser.INT)
            self.state = 205
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 201
                self.match(MyGrammarParser.COMMA)
                self.state = 202
                self.match(MyGrammarParser.INT)
                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 208
            self.match(MyGrammarParser.RSQUARE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TreesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSQUARE(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.LSQUARE)
            else:
                return self.getToken(MyGrammarParser.LSQUARE, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.INT)
            else:
                return self.getToken(MyGrammarParser.INT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.COMMA)
            else:
                return self.getToken(MyGrammarParser.COMMA, i)

        def RSQUARE(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.RSQUARE)
            else:
                return self.getToken(MyGrammarParser.RSQUARE, i)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.SEMI)
            else:
                return self.getToken(MyGrammarParser.SEMI, i)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_trees

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrees" ):
                listener.enterTrees(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrees" ):
                listener.exitTrees(self)




    def trees(self):

        localctx = MyGrammarParser.TreesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_trees)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 210
            self.match(MyGrammarParser.LSQUARE)
            self.state = 211
            self.match(MyGrammarParser.LSQUARE)
            self.state = 212
            self.match(MyGrammarParser.INT)
            self.state = 213
            self.match(MyGrammarParser.COMMA)
            self.state = 214
            self.match(MyGrammarParser.INT)
            self.state = 215
            self.match(MyGrammarParser.COMMA)
            self.state = 216
            self.match(MyGrammarParser.INT)
            self.state = 217
            self.match(MyGrammarParser.RSQUARE)
            self.state = 228
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 218
                self.match(MyGrammarParser.COMMA)
                self.state = 219
                self.match(MyGrammarParser.LSQUARE)
                self.state = 220
                self.match(MyGrammarParser.INT)
                self.state = 221
                self.match(MyGrammarParser.COMMA)
                self.state = 222
                self.match(MyGrammarParser.INT)
                self.state = 223
                self.match(MyGrammarParser.COMMA)
                self.state = 224
                self.match(MyGrammarParser.INT)
                self.state = 225
                self.match(MyGrammarParser.RSQUARE)
                self.state = 230
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 231
            self.match(MyGrammarParser.SEMI)
            self.state = 232
            self.match(MyGrammarParser.LSQUARE)
            self.state = 233
            self.match(MyGrammarParser.INT)
            self.state = 234
            self.match(MyGrammarParser.COMMA)
            self.state = 235
            self.match(MyGrammarParser.INT)
            self.state = 236
            self.match(MyGrammarParser.COMMA)
            self.state = 237
            self.match(MyGrammarParser.INT)
            self.state = 238
            self.match(MyGrammarParser.RSQUARE)
            self.state = 249
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 239
                self.match(MyGrammarParser.COMMA)
                self.state = 240
                self.match(MyGrammarParser.LSQUARE)
                self.state = 241
                self.match(MyGrammarParser.INT)
                self.state = 242
                self.match(MyGrammarParser.COMMA)
                self.state = 243
                self.match(MyGrammarParser.INT)
                self.state = 244
                self.match(MyGrammarParser.COMMA)
                self.state = 245
                self.match(MyGrammarParser.INT)
                self.state = 246
                self.match(MyGrammarParser.RSQUARE)
                self.state = 251
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 252
            self.match(MyGrammarParser.SEMI)
            self.state = 253
            self.match(MyGrammarParser.LSQUARE)
            self.state = 254
            self.match(MyGrammarParser.INT)
            self.state = 255
            self.match(MyGrammarParser.COMMA)
            self.state = 256
            self.match(MyGrammarParser.INT)
            self.state = 257
            self.match(MyGrammarParser.COMMA)
            self.state = 258
            self.match(MyGrammarParser.INT)
            self.state = 259
            self.match(MyGrammarParser.RSQUARE)
            self.state = 270
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 260
                self.match(MyGrammarParser.COMMA)
                self.state = 261
                self.match(MyGrammarParser.LSQUARE)
                self.state = 262
                self.match(MyGrammarParser.INT)
                self.state = 263
                self.match(MyGrammarParser.COMMA)
                self.state = 264
                self.match(MyGrammarParser.INT)
                self.state = 265
                self.match(MyGrammarParser.COMMA)
                self.state = 266
                self.match(MyGrammarParser.INT)
                self.state = 267
                self.match(MyGrammarParser.RSQUARE)
                self.state = 272
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 273
            self.match(MyGrammarParser.RSQUARE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyGrammarParser.ID, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.INT)
            else:
                return self.getToken(MyGrammarParser.INT, i)

        def func(self):
            return self.getTypedRuleContext(MyGrammarParser.FuncContext,0)


        def NOT(self):
            return self.getToken(MyGrammarParser.NOT, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.ExprContext,i)


        def lists(self):
            return self.getTypedRuleContext(MyGrammarParser.ListsContext,0)


        def trees(self):
            return self.getTypedRuleContext(MyGrammarParser.TreesContext,0)


        def AND(self):
            return self.getToken(MyGrammarParser.AND, 0)

        def OR(self):
            return self.getToken(MyGrammarParser.OR, 0)

        def COMBINATION(self):
            return self.getToken(MyGrammarParser.COMBINATION, 0)

        def INTERSECTION(self):
            return self.getToken(MyGrammarParser.INTERSECTION, 0)

        def SET(self):
            return self.getToken(MyGrammarParser.SET, 0)

        def SSET(self):
            return self.getToken(MyGrammarParser.SSET, 0)

        def GREATER(self):
            return self.getToken(MyGrammarParser.GREATER, 0)

        def LESS(self):
            return self.getToken(MyGrammarParser.LESS, 0)

        def INCREMENT(self):
            return self.getToken(MyGrammarParser.INCREMENT, 0)

        def DECREMENT(self):
            return self.getToken(MyGrammarParser.DECREMENT, 0)

        def index(self):
            return self.getTypedRuleContext(MyGrammarParser.IndexContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)


